--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,73 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.eu.fpms.bbap.RegisterActivity">
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    tools:layout_editor_absoluteX="14dp"
+    tools:layout_editor_absoluteY="17dp">
 
-    <LinearLayout
-        android:layout_width="356dp"
-        android:layout_height="476dp"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="14dp"
-        tools:layout_editor_absoluteY="17dp"
-        tools:ignore="MissingConstraints">
+    <EditText
+        android:id="@+id/etUsername"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:ems="10"
+        android:hint="Username"
+        android:inputType="textPersonName"
+        tools:layout_editor_absoluteX="12dp"
+        tools:layout_editor_absoluteY="81dp" />
 
-        <EditText
-            android:id="@+id/etName"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:ems="10"
-            android:hint="Name"
-            android:inputType="textPersonName"
-            tools:layout_editor_absoluteX="11dp"
-            tools:layout_editor_absoluteY="16dp" />
+    <EditText
+        android:id="@+id/etPassword"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:maxLength="4"
+        android:selectAllOnFocus="false"
+        android:singleLine="false"
+        tools:layout_editor_absoluteX="13dp"
+        tools:layout_editor_absoluteY="151dp"
+        tools:password="false" />
 
-        <EditText
-            android:id="@+id/etUsername"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:ems="10"
-            android:hint="Username"
-            android:inputType="textPersonName"
-            tools:layout_editor_absoluteX="12dp"
-            tools:layout_editor_absoluteY="81dp" />
+    <EditText
+        android:id="@+id/etEmail"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:ems="10"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:maxLength="4"
+        android:selectAllOnFocus="false"
+        android:singleLine="false" />
 
-        <EditText
-            android:id="@+id/etPassword"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:ems="10"
-            android:hint="Password (4 digits)"
-            android:inputType="numberPassword"
-            android:maxLength="4"
-            android:selectAllOnFocus="false"
-            android:singleLine="false"
-            tools:layout_editor_absoluteX="13dp"
-            tools:layout_editor_absoluteY="151dp"
-            tools:password="false" />
+    <EditText
+        android:id="@+id/etSex"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:ems="10"
+        android:hint="Sexe"
+        android:inputType="text"
+        android:maxLength="4"
+        android:selectAllOnFocus="false"
+        android:singleLine="false" />
 
-        <Button
-            android:id="@+id/bRegister"
-            android:layout_width="200dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center_horizontal"
-            android:text="Register"
-            tools:layout_editor_absoluteX="99dp"
-            tools:layout_editor_absoluteY="293dp"
-            tools:textSize="18sp" />
+    <Button
+        android:id="@+id/bRegister"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center_horizontal"
+        android:text="Register"
+        tools:layout_editor_absoluteX="99dp"
+        tools:layout_editor_absoluteY="293dp"
+        tools:textSize="18sp" />
 
-        <TextView
-            android:id="@+id/tvGoLogin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Already registered ? Log in !"
-            android:textAlignment="center"
-            android:textAllCaps="true"
-            android:textStyle="bold" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/tvGoLogin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Already registered ? Log in !"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textStyle="bold" />
 
-</android.support.constraint.ConstraintLayout>
+
+</LinearLayout>
