--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:ems="10"
-        android:hint="Username"
+        android:hint="Nom d'utilisateur"
         android:inputType="textPersonName"
         tools:layout_editor_absoluteX="12dp"
         tools:layout_editor_absoluteY="81dp" />
@@ -23,9 +23,8 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:ems="10"
-        android:hint="Password"
+        android:hint="Mot de passe"
         android:inputType="textPassword"
-        android:maxLength="4"
         android:selectAllOnFocus="false"
         android:singleLine="false"
         tools:layout_editor_absoluteX="13dp"
@@ -39,7 +38,6 @@
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        android:maxLength="4"
         android:selectAllOnFocus="false"
         android:singleLine="false" />
 
@@ -50,16 +48,45 @@
         android:ems="10"
         android:hint="Sexe"
         android:inputType="text"
-        android:maxLength="4"
+        android:selectAllOnFocus="false"
+        android:singleLine="false" />
+
+    <EditText
+        android:id="@+id/etAge"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:ems="10"
+        android:hint="Âge"
+        android:inputType="number"
+        android:selectAllOnFocus="false"
+        android:singleLine="false" />
+
+    <EditText
+        android:id="@+id/etHeight"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:ems="10"
+        android:hint="Taille"
+        android:inputType="number"
+        android:selectAllOnFocus="false"
+        android:singleLine="false" />
+
+    <EditText
+        android:id="@+id/etWeight"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:ems="10"
+        android:hint="Poids"
+        android:inputType="number"
         android:selectAllOnFocus="false"
         android:singleLine="false" />
 
     <Button
         android:id="@+id/bRegister"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
+        android:layout_width="180dp"
+        android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
-        android:text="Register"
+        android:text="S'enregistrer"
         tools:layout_editor_absoluteX="99dp"
         tools:layout_editor_absoluteY="293dp"
         tools:textSize="18sp" />
@@ -69,7 +96,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Already registered ? Log in !"
+        android:text="Déjà inscrit ? Connecte-toi !"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textStyle="bold" />
