J'ai réparé l'enregistrement et la connexion parce que c'était cassé ! Mais tout marche maintenant ! Il faut donc se pencher sur l'espace accueil utilisateur !

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,6 +12,7 @@
         android:id="@+id/etUsername"
         android:layout_width="350dp"
         android:layout_height="60dp"
+        android:layout_marginTop="5dp"
         android:ems="10"
         android:hint="Nom d'utilisateur"
         android:inputType="textPersonName"
