--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#7F0202</color>
     <color name="colorPrimaryDark">#510101</color>
     <color name="colorAccent">#FFAA00</color>
-    <color name="colorBackground">#FFFFFF</color>
+    <color name="colorBackground">#FCF9F9</color>
 </resources>
