--- a/app/src/main/res/layout/listview_layout.xml
+++ b/app/src/main/res/layout/listview_layout.xml
@@ -13,7 +13,7 @@
 
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imviewBeer"
             android:layout_width="80dp"
             android:layout_height="80dp" />
 
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toEndOf="@+id/imageView"
+            android:layout_toEndOf="@+id/imviewBeer"
             android:textSize="20dp"
             android:textStyle="bold" />
 
