--- a/app/src/main/res/layout/activity_user_drinksheet.xml
+++ b/app/src/main/res/layout/activity_user_drinksheet.xml
@@ -60,6 +60,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:onClick="open_dialog"
         app:layout_constraintBottom_toTopOf="@+id/button_calcul_alcool"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
