--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="5dp"
-        android:text="Not registered yet ?"
+        android:text="Pas encore inscrit ?"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textStyle="bold" />
