--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -12,19 +12,28 @@
         android:padding="15dp">
 
 
-        <ImageView
-            android:id="@+id/imviewBeer"
-            android:layout_width="80dp"
-            android:layout_height="80dp" />
-
         <TextView
             android:id="@+id/tvBeername"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_toEndOf="@+id/imviewBeer"
+            android:layout_marginStart="48dp"
+            android:layout_weight="1"
+            android:text="beer"
             android:textSize="20dp"
             android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/etQuantity"
+            android:layout_width="60dp"
+            android:layout_height="30dp"
+            android:layout_centerInParent="true"
+            android:layout_weight="1"
+            android:background="@drawable/edit_text_style"
+            android:ems="5"
+            android:inputType="number"
+            android:text="330" />
 
     </RelativeLayout>
 </LinearLayout>
