--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -14,13 +14,12 @@
 
         <TextView
             android:id="@+id/tvBeername"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginStart="48dp"
+            android:layout_marginStart="24dp"
             android:layout_weight="1"
-            android:text="beer"
             android:textSize="20dp"
             android:textStyle="bold" />
 
@@ -28,12 +27,12 @@
             android:id="@+id/etQuantity"
             android:layout_width="60dp"
             android:layout_height="30dp"
-            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@+id/tvBeername"
             android:layout_weight="1"
             android:background="@drawable/edit_text_style"
             android:ems="5"
-            android:inputType="number"
-            android:text="330" />
+            android:inputType="number" />
 
     </RelativeLayout>
 </LinearLayout>
