--- a/app/src/main/res/layout/activity_user_area.xml
+++ b/app/src/main/res/layout/activity_user_area.xml
@@ -2,32 +2,44 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
     <TextView
         android:id="@+id/tv1"
         android:layout_width="350dp"
-        android:layout_height="60dp"
+        android:layout_height="44dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="22sp" />
 
     <TextView
         android:id="@+id/tv2"
         android:layout_width="350dp"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="TextView" />
+        android:layout_marginTop="10dp"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="18sp" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="wrap_content"
+        android:layout_height="5dp"
+        android:layout_marginTop="15dp"
+        android:background="?android:attr/listDivider" />
 
     <Button
         android:id="@+id/b1"
         android:layout_width="200dp"
         android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="50dp"
         android:text="Créer une drinksheet" />
 
     <Button
@@ -35,7 +47,7 @@
         android:layout_width="200dp"
         android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:text="Mettre à jour mes informations" />
 
     <Button
@@ -43,7 +55,7 @@
         android:layout_width="200dp"
         android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:text="Consulter mon historique" />
 
 </LinearLayout>
